dnl Process this file with autoconf to produce a configure script.

AC_INIT(cif.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(cif, 0.1.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

# checks for pthreads
ACX_PTHREAD([enable_threads="pthread"],[enable_threads="no"])
if test $enable_threads != "pthread"; then
    AC_MSG_ERROR([POSIX thread support required])
else
    AC_DEFINE(HAVE_PTHREAD,1,
	      [Define if you have POSIX threads libraries and header files.])
    LIBS="$PTHREAD_LIBS $LIBS"
    CFLAGS="$PTHREAD_CFLAGS $CFLAGS"
    CXXFLAGS="$PTHREAD_CFLAGS $CXXFLAGS"
fi

jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo mknod)
AC_CHECK_FUNCS(pthread_mutexattr_setprotocol pthread_mutexattr_setrobust_np)
    
dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl i18n makros.
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.14.1)

AC_CONFIG_FILES([Makefile 
		 cif.lsm 
		 cif.spec 
		 cif.dox
		 po/Makefile.in])
AC_OUTPUT
